# hyprland-window-plugin

./: .gitignore  Cargo.toml  flake.nix
src/: lib.rs
