[package]
name = "hyprland-window-plugin"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
abi_stable = "0.11.2"
anyrun-interface = "0.1.0"
anyrun-macros = "0.1.0"
anyrun-plugin = "0.1.0"
freedesktop_entry_parser = "1.3.0"
fuzzy-matcher = "0.3.7"
glib = "0.18.1"
hyprland = "0.3.9"
ron = "0.8.1"
serde = { version = "1.0.188", features = ["serde_derive"] }
